// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when isFree is false and there is a price range 1`] = `
<View
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgb(45, 47, 127)",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        allowFontScaling={true}
        markdown={false}
        style={
          Object {
            "color": "#ffffff",
          }
        }
        type="price"
      >
        From £12
      </Text>
    </View>
  </ImageBackground>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 8,
      }
    }
  >
    <Text
      allowFontScaling={true}
      markdown={false}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
        }
      }
      type="small"
    >
      12:12 - 13:12
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        allowFontScaling={true}
        markdown={false}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
            "paddingTop": 4,
          }
        }
        type="h3"
      >
        name
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      markdown={false}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
          "fontSize": 12,
          "lineHeight": 16,
          "paddingTop": 4,
        }
      }
      type="text"
    >
      location
    </Text>
  </View>
</View>
`;

exports[`renders correctly when isFree is false and there's only one price 1`] = `
<View
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgb(45, 47, 127)",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        allowFontScaling={true}
        markdown={false}
        style={
          Object {
            "color": "#ffffff",
          }
        }
        type="price"
      >
        £12
      </Text>
    </View>
  </ImageBackground>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 8,
      }
    }
  >
    <Text
      allowFontScaling={true}
      markdown={false}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
        }
      }
      type="small"
    >
      12:12 - 13:12
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        allowFontScaling={true}
        markdown={false}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
            "paddingTop": 4,
          }
        }
        type="h3"
      >
        name
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      markdown={false}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
          "fontSize": 12,
          "lineHeight": 16,
          "paddingTop": 4,
        }
      }
      type="text"
    >
      location
    </Text>
  </View>
</View>
`;

exports[`renders correctly when isFree is true 1`] = `
<View
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgb(45, 47, 127)",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        allowFontScaling={true}
        markdown={false}
        style={
          Object {
            "color": "#ffffff",
          }
        }
        type="price"
      >
        Free
      </Text>
    </View>
  </ImageBackground>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 8,
      }
    }
  >
    <Text
      allowFontScaling={true}
      markdown={false}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
        }
      }
      type="small"
    >
      12:12 - 13:12
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        allowFontScaling={true}
        markdown={false}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
            "paddingTop": 4,
          }
        }
        type="h3"
      >
        name
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      markdown={false}
      style={
        Object {
          "color": "rgb(45, 47, 127)",
          "fontSize": 12,
          "lineHeight": 16,
          "paddingTop": 4,
        }
      }
      type="text"
    >
      location
    </Text>
  </View>
</View>
`;
